# unibot

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  codigo_beneficiario_list.txt  docker-compose.yml  entrypoint.sh  env_vars_django.txt  manage.py  processed_clients.json  pyproject.toml  requirements.txt
app/: __init__.py  asgi.py  celery.py  settings.py  urls.py
core/: admin.py  celery_reload.py  consumers.py  form.py  import.py  main.py  models.py  routing.py  serializers.py  tasks.py  views.py
core/migrations/: 0001_initial.py  0002_rename_clientmodel_client.py  0003_rename_id_card_client_codigo_beneficiario_and_more.py
core/templates/: client_create.html  client_edit.html  client_list.html  index.html  login.html
core/templates/components/: footer.html  header.html
