[tool.poetry]
name = "unibot"
version = "0.1.0"
description = ""
authors = ["AVSOLVE <alexandrelima.mail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
gunicorn = "^22.0.0"
prettyconf = "^2.2.1"
dj-database-url = "^2.2.0"
django-storages = "^1.14.4"
psycopg2 = "^2.9.9"
boto3 = "^1.34.141"
pillow = "^10.4.0"

django-cors-headers = "^4.4.0"
djangorestframework = "^3.15.2"
celery = "^5.4.0"
django-celery-results = "^2.5.1"
django-redis = "^5.4.0"
drf-yasg = "^1.21.7"
setuptools = "^75.1.0"
validate-docbr = "^1.10.0"
django-debug-toolbar = "^4.4.6"
requests = "^2.32.3"
django-recaptcha = "^4.0.0"
newrelic = "^10.2.0"
qrcode = "^8.0"
cachetools = "^5.5.0"
playwright = "^1.49.1"
redis = "^5.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"