[tool.poetry]
name = "unibot"
version = "0.1.0"
description = ""
authors = ["AVSOLVE <alexandrelima.mail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"


django-cors-headers = "^4.4.0"
djangorestframework = "^3.15.2"
celery = "^5.4.0"
django-celery-results = "^2.5.1"
django-redis = "^5.4.0"
requests = "^2.32.3"
playwright = "^1.49.1"
daphne = "^4.1.2"
pre-commit = "^4.0.1"
channels = "^4.2.0"

[tool.poetry.group.dev.dependencies]
djangorestframework = "^3.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 88
multi_line_output = 3
known_first_party = ["config"]

[tool.djlint]
profile = "django"
ignore = "H031"
